# OBC_software

./: .gitignore  .project  CMakeLists.txt  Example.cpp  Example.hpp  Example2.cpp  FSM.c  README.md  README.txt  git_example.txt  main.c  notes.txt
.metadata/: .log4j.xml  version.ini
ADCS-Simulator/: TLM_Nov18.csv  adcs_simulator.py  simulator.py
ADCSFirmware/: .cproject  .mxproject
ADCSFirmware2/: .cproject  .project  ADCSFirmware2.ioc
CameraMod/: .cproject  .mxproject  .project  Okay...LetsDoThisOneLastTime Debug.launch  Okay...LetsDoThisOneLastTime.ioc
CommsPortsSetupv1/: .cproject  .mxproject  .project  CommsPortsSetupv1.ioc
FileTesting/: .cproject  .mxproject  .project  FileTesting Debug.launch  FileTesting.ioc  STM32L4R5ZITX_FLASH.ld  STM32L4R5ZITX_RAM.ld  readmeifyouwant.txt
GPSTESTAGAIN/: .cproject  .project  GPSTESTAGAIN Debug.launch  GPSTESTAGAIN.ioc
GPSdev/: .cproject  .gitignore  .mxproject  .project  GPSv1.ioc  STM32L4R5ZITX_FLASH.ld  STM32L4R5ZITX_RAM.ld
GPSsendrecTEST/: .cproject  .mxproject  .project  GPSsendrecTEST Debug.launch  GPSsendrecTEST.ioc  STM32L4R5ZITX_FLASH.ld  STM32L4R5ZITX_RAM.ld
I2C_Test/: .cproject  .mxproject  .project  I2C_Test.ioc  STM32L4R5ZITX_FLASH.ld  STM32L4R5ZITX_RAM.ld
Internal/: .cproject  .gitignore  .mxproject  .project  Internal Debug.launch  Internal.ioc  PizzaTime8D Debug (1).launch  PizzaTime8D Debug.launch  (+1 more)
test/: .cproject  .mxproject  CMakeLists.txt  Example2Test.cpp  ExampleTests.cpp  test Debug.launch  test.ioc
test/Core/Inc/: main.h
test/Core/Src/: main.c  stm32l4xx_hal_msp.c
(+1126 files in other folders)
